# simple-library

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  data.py  exceptions.py  models.py  repository.py  services.py  storage.py  utils.py
app/web/: __init__.py  app.py  schemas.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: ci.sh
tests/: conftest.py
tests/integration/: test_cli.py  test_web.py
tests/unit/: test_repository.py  test_services.py  test_utils.py
