[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-library-app"
version = "0.1.0"
description = "A deceptively simple CLI for managing a personal library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<0.112.0",
    "uvicorn>=0.23.0,<0.28.0",
    "pydantic>=2.6.0,<2.10.0",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "frontend*", "scripts*", "dist*", "node_modules*"]
